--- a/index.html
+++ b/index.html
@@ -16,23 +16,117 @@
 </head>
 
 <body class="main-bg">
-    <aside class="menu">
-        <section class="main-content menu-content">
-            <h1><a href="#">LOGO</a></h1>
+    <aside class="menu white-bg">
+        <div class="main-content menu-content">
+            <h1><a href="#intro">LOGO</a></h1>
             <nav>
                 <ul>
-                    <li><a href="#">Intro</a></li>
-                    <li><a href="#">Top 3</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#top3">Intro</a></li>
+                    <li><a href="#grid-one">Top 3</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#">Work</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-        </section>
-
+        </div>
     </aside>
-    <section class="section white-bg"></section>
-    <section class="section"></section>
+    <div class="menu-spacing"></div>
+    <section id="intro" class="intro section main-bg">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>January brings us firefox 85</h2>
+                <p>Nesse caso, o desejo e a vontade em pertencer ao grupo dos belos e perfeitos, dos rostos simétricos
+                    classificados por
+                    rótulos, em contraponto a busca de expressão de sua própria individualidade que, na maior parte das
+                    vezes,
+                    justifica-se
+                    por um sentimento de insuficiência e competição.</p>
+            </div>
+            <div class="intro-img-content">
+                <div class="intro-img">
+                    <img src="assets/img/javascript-not-optimized.svg" alt="imagem de apresentação" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="top3" class="section white-bg">
+        <div class="main-content top-three-content">
+            <h2>top 3 jobs</h2>
+            <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and
+                some
+                surprises at the machine’s performance. This post details some background information on the experience
+                of
+                porting
+                Firefox to run natively on these CPUs.</p>
+            <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that
+                needed
+                to know
+                about the new architecture, before moving on to the concept of Universal Binaries.</p>
+            <p>We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur,
+                and
+                discuss
+                various updater problems we had to deal with. We’ll conclude with the release and an overview of various
+                other
+                improvements that are in the pipeline.</p>
+
+        </div>
+    </section>
+    <section id="grid-one" class="grid-one main-bg section">
+        <div class="grid-one-content main-content">
+            <h2 class="grid-main-heading">Top 3 Jobs</h2>
+            <p class="grid-description">Description is a way</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste um</h3>
+                    <p>Anyone who lives on this planet – even people who have never owned a bicycle – knows that these
+                        bicycle
+                        racks are for
+                        sharing; they are meant for not only one set of bikes, but at least a dozen of them. This
+                        person,
+                        however, was probably
+                        too lazy to lock his bike the proper way, and he decided that as long as this rack is empty at
+                        the
+                        moment, he can use it
+                        all for himself.</p>
+                </article>
+
+                <article>
+                    <h3>Teste dois</h3>
+                    <p>Anyone who lives on this planet – even people who have never owned a bicycle – knows that these
+                        bicycle
+                        racks are for
+                        sharing; they are meant for not only one set of bikes, but at least a dozen of them. This
+                        person,
+                        however, was probably
+                        too lazy to lock his bike the proper way, and he decided that as long as this rack is empty at
+                        the
+                        moment, he can use it
+                        all for himself.</p>
+                </article>
+
+
+                <article>
+                    <h3>Teste dois</h3>
+                    <p>Anyone who lives on this planet – even people who have never owned a bicycle – knows that these
+                        bicycle
+                        racks are for
+                        sharing; they are meant for not only one set of bikes, but at least a dozen of them. This
+                        person,
+                        however, was probably
+                        too lazy to lock his bike the proper way, and he decided that as long as this rack is empty at
+                        the
+                        moment, he can use it
+                        all for himself.</p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="gallery" class="section white-bg">
+        <div class="main-content">
+
+        </div>
+    </section>
 </body>
 
 </html>
