--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <li><a href="#top3">Intro</a></li>
                     <li><a href="#grid-one">Top 3</a></li>
                     <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#">Work</a></li>
+                    <li><a href="#grid-two">Work</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -122,9 +123,151 @@
             </div>
         </div>
     </section>
-    <section id="gallery" class="section white-bg">
-        <div class="main-content">
+    <section id="gallery" class="grid-one white-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">Gallery</h2>
+            <p class="grid-description">Uma breve descrição.</p>
 
+            <div class="grid">
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=1" alt="random image from unsplash" />
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=2" alt="random image from unsplash" />
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=3" alt="random image from unsplash" />
+                </div>
+                <!-- <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=4" alt="random image from unsplash" />
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=5" alt="random image from unsplash" />
+                </div>
+                <div class="gallery-img">
+                    <img src="http://source.unsplash.com/random/360x360?r=6" alt="random image from unsplash" />
+                </div> -->
+            </div>
+        </div>
+    </section>
+    <section id="grid-two" class="grid-one main-bg section">
+        <div class="grid-one-content main-content">
+            <h2 class="grid-main-heading">Top 3 Jobs</h2>
+            <p class="grid-description">Description is a way</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste um</h3>
+                    <p>Anyone who lives on this planet – even people who have never owned a bicycle – knows that these
+                        bicycle
+                        racks are for
+                        sharing; they are meant for not only one set of bikes, but at least a dozen of them. This
+                        person,
+                        however, was probably
+                        too lazy to lock his bike the proper way, and he decided that as long as this rack is empty at
+                        the
+                        moment, he can use it
+                        all for himself.</p>
+                </article>
+
+                <article>
+                    <h3>Teste dois</h3>
+                    <p>Anyone who lives on this planet – even people who have never owned a bicycle – knows that these
+                        bicycle
+                        racks are for
+                        sharing; they are meant for not only one set of bikes, but at least a dozen of them. This
+                        person,
+                        however, was probably
+                        too lazy to lock his bike the proper way, and he decided that as long as this rack is empty at
+                        the
+                        moment, he can use it
+                        all for himself.</p>
+                </article>
+
+
+                <article>
+                    <h3>Teste dois</h3>
+                    <p>Anyone who lives on this planet – even people who have never owned a bicycle – knows that these
+                        bicycle
+                        racks are for
+                        sharing; they are meant for not only one set of bikes, but at least a dozen of them. This
+                        person,
+                        however, was probably
+                        too lazy to lock his bike the proper way, and he decided that as long as this rack is empty at
+                        the
+                        moment, he can use it
+                        all for himself.</p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="pricing" class="section white-bg">
+        <div class="main-content top-three-content">
+            <h2>Pricing</h2>
+            <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and
+                some
+                surprises at the machine’s performance. This post details some background information on the experience
+                of
+                porting
+                Firefox to run natively on these CPUs.</p>
+            <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that
+                needed
+                to know
+                about the new architecture, before moving on to the concept of Universal Binaries.</p>
+
+            <div class="responsive-table">
+                <table>
+                    <caption>Pricing table</caption>
+                    <thead>
+                        <tr>
+                            <th>Title1</th>
+                            <th>Title2</th>
+                            <th>Title3</th>
+                            <th>Title4</th>
+                            <th>Title5</th>
+                        </tr>
+
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>content 1</td>
+                            <td>content 2</td>
+                            <td>content 3</td>
+                            <td>content 4</td>
+                            <td>content 5</td>
+                        </tr>
+                        <tr>
+                            <td>content 1</td>
+                            <td>content 2</td>
+                            <td>content 3</td>
+                            <td>content 4</td>
+                            <td>content 5</td>
+                        </tr>
+                        <tr>
+                            <td>content 1</td>
+                            <td>content 2</td>
+                            <td>content 3</td>
+                            <td>content 4</td>
+                            <td>content 5</td>
+                        </tr>
+                        <tr>
+                            <td>content 1</td>
+                            <td>content 2</td>
+                            <td>content 3</td>
+                            <td>content 4</td>
+                            <td>content 5</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Testando</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
         </div>
     </section>
 </body>
