--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
         rel="stylesheet">
 </head>
 
-<body class="main-bg">
+<body>
+    <input id="close-menu" class="close-menu" type="checkbox" aria-label="close menu" role="button">
+    <label class="close-menu-label" for="close-menu" title="close menu"></label>
     <aside class="menu white-bg">
         <div class="main-content menu-content">
-            <h1><a href="#intro">LOGO</a></h1>
+            <h1 onclick="getElementById('close-menu').checked = false;"><a href=" #intro">LOGO</a></h1>
             <nav>
-                <ul>
+                <ul onclick="getElementById('close-menu').checked = false;">
                     <li><a href="#top3">Intro</a></li>
                     <li><a href="#grid-one">Top 3</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#grid-two">Work</a></li>
                     <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -138,7 +140,7 @@
                 <div class="gallery-img">
                     <img src="http://source.unsplash.com/random/360x360?r=3" alt="random image from unsplash" />
                 </div>
-                <!-- <div class="gallery-img">
+                <div class="gallery-img">
                     <img src="http://source.unsplash.com/random/360x360?r=4" alt="random image from unsplash" />
                 </div>
                 <div class="gallery-img">
@@ -146,7 +148,7 @@
                 </div>
                 <div class="gallery-img">
                     <img src="http://source.unsplash.com/random/360x360?r=6" alt="random image from unsplash" />
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
@@ -270,6 +272,66 @@
             </div>
         </div>
     </section>
+    <section id="contact" class="intro section main-bg">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>January brings us firefox 85</h2>
+                <p>Nesse caso, o desejo e a vontade em pertencer ao grupo dos belos e perfeitos, dos rostos simétricos
+                    classificados por
+                    rótulos, em contraponto a busca de expressão de sua própria individualidade que, na maior parte das
+                    vezes,
+                    justifica-se
+                    por um sentimento de insuficiência e competição.</p>
+            </div>
+            <div class="intro-img-content">
+                <div class="intro-img">
+                    <img src="assets/img/javascript-not-optimized.svg" alt="imagem de apresentação" />
+                </div>
+            </div>
+            <div class="contact-form">
+                <div class="intro-img">
+                    <fieldset class="form-grid">
+                        <legend>Contact me</legend>
+                        <div class="form-group">
+                            <label for="firstName">
+                                First name
+                            </label>
+                            <input type="text" name="firstName" id="firstName" placeholder="first name">
+                        </div>
+                        <div class="form-group">
+                            <label for="lastName">
+                                Last name
+                            </label>
+                            <input type="text" name="lastName" id="lastName" placeholder="last name">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">
+                                Email
+                            </label>
+                            <input type="email" name="email" id="email" placeholder="email">
+                        </div>
+                        <div class="form-group"></div>
+                        <div class="form-group full-width">
+                            <label for="message">
+                                Message
+                            </label>
+                            <textarea name="message" id="message" cols="30" rows="10"
+                                placeholder="your message"> </textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit">Send message</button>
+                        </div>
+                    </fieldset>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer id="footer" class="footer white-bg">
+        <p><a rel="nofollow" target="_blank" href="https://www.linkedin.com/in/millercesaroliveira/">Feito com <span
+                    class="heart">❤</span> por Miller César de Oliveira</a></p>
+    </footer>
+
+    <a class="back-to-top" href="#">➤</a>
 </body>
 
 </html>
